syntax = "proto3";
package models;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tanan/fast-writing/pkg/pb/models";

message ContentsId {
  int64 id = 1;
}

message Contents {
  ContentsId id = 1;
  string title = 2;
  string creator = 3;
  repeated Quiz quizList = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message ContentsList {
  repeated Contents contentsList = 1;
}

message Quiz {
  int64 id = 1;
  string question = 2;
  string answer = 3;
}
